// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot empty error match 1`] = `null`;

exports[`snapshot empty info match 1`] = `null`;

exports[`snapshot full error match 1`] = `
<div
  className="sc-bdfBwQ cjQMhH m-error"
>
  Test
</div>
`;

exports[`snapshot full error match 2`] = `
<div
  className="sc-bdfBwQ cjQMhH m-info"
>
  Test
</div>
`;
